--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 ООП в PHP: изучаем на реальных примерах
 
-Лично мне очень нравится ООП в PHP, и возможности, которые оно дает для создания продукта, достаточно велики. Большинство вакансий PHP - разработчика включает в себя требования к владению ООП в разработке. Вы не сможете написать что-то вразумительное на современных PHP фреймворках, таких как Laravel, Symfony, или на таком популярном, как 1C Bitrix, если не владеете хотя бы основами ООП. В интернете существует множество гайдов, что такое ООП, есть некоторые недурные <a href="https://books.google.ru/books/about/%D0%9F%D1%80%D0%B8%D0%B5%D0%BC%D1%8B_%D0%BE%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%D0%BD%D0%BE_%D0%BE%D1%80%D0%B8%D0%B5%D0%BD.html?id=D_TDCwAAQBAJ&printsec=frontcover&source=kp_read_button&redir_esc=y#v=onepage&q&f=false"> книги</a> , и чуть меньше именно по ООП в  <a href="http://www.dialektika.com/books/978-5-8459-1689-1.html"> именно в PHP</a>. В последнее время я перевернул интернет в поисках примеров для студентов, и не нашел практически ничего свеженького, что могло бы быть реально полезно. Сегодня я хочу немного изменить эту игру, и посмотреть на теорию параллельно с реально работающими примерами. Конечно, идеального кода я сегодня на напишу, оно и понятно - реально большие PHP ООП проекты очень большие, поэтому по возможности я буду приводить компактные примеры. Кроме того, как ООП программу не напиши, в ней всегда можно будет найти недостатки.
+Лично мне очень нравится ООП в PHP, и возможности, которые оно дает для создания продукта, достаточно велики. Большинство вакансий PHP - разработчика включает в себя требования к владению ООП в разработке. Вы не сможете написать что-то вразумительное на современных PHP фреймворках, таких как Laravel, Symfony, или на таком популярном, как 1C Bitrix, если не владеете хотя бы основами ООП. В интернете существует множество гайдов, что такое ООП, есть некоторые недурные <a href="https://books.google.ru/books/about/%D0%9F%D1%80%D0%B8%D0%B5%D0%BC%D1%8B_%D0%BE%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%D0%BD%D0%BE_%D0%BE%D1%80%D0%B8%D0%B5%D0%BD.html?id=D_TDCwAAQBAJ&printsec=frontcover&source=kp_read_button&redir_esc=y#v=onepage&q&f=false"> книги</a> , и чуть меньше именно по ООП в <a href="http://www.dialektika.com/books/978-5-8459-1689-1.html"> именно в PHP</a>. В последнее время я перевернул интернет в поисках примеров для студентов, и не нашел практически ничего свеженького, что могло бы быть реально полезно. Сегодня я хочу немного изменить эту игру, и посмотреть на теорию параллельно с реально работающими примерами. Конечно, идеального кода я сегодня на напишу, оно и понятно - реально большие PHP ООП проекты очень большие, поэтому по возможности я буду приводить компактные примеры. Кроме того, как ООП программу не напиши, в ней всегда можно будет найти недостатки.
 <cut />
 
 <h3> Вступление </h3>
 Несмотря на большое количество гайдов по ООП, в которых авторы не привязываются конкретно ни к какому языку, сама реализация объектов и классов, а главное, синтаксические возможности языков разительно различаются. Если современное ООП в JavaScript у разработчиков из статических языков вызывает только раздражение (цитата моего знакомого Java - разработчика "из JavaScript мне нравится только TypeScript, но он потом все равно компилируется в JavaScript, поэтому он мне тоже не нравится"), и дело не только в динамической типизации, но и развитии ООП, но с другой стороны ничего нелогично здесь нет - JavaScript  это полноценный, но скриптовый язык программирования, который в итоге через развитие интернета и разросся до неимоверных размеров. Но сейчас речь не о JavaScript или Java, сейчас речь о языке, который находится в своем положении где-то посередине - PHP.
 
 <h5> Зачем там вообще в PHP ООП </h5>
-До какого-то ключевого момента (примерно до 5 версии), в PHP не было полноценной поддержки ООП, хотя классы и объекты поддерживались уже с 3 версии. Конечно, в самом PHP заключаются некоторые фатальные недостатки, большинство из которых все еще остаются в языке даже в новейших версиях (полный список, если вы еще их не читали, можно почитать в этой  <a href="http://eqsash.com/articles/ustroystvo-yazyka-php-ego-plyusy-i-minusy">  статейке</a>). Но непонятных статей на темы "ООП в PHP совсем другое, и это хорошо", "не трогайте OOП в PHP, и вас ждет успех" и так далее много, так что давайте теперь перейдем к самому синтаксису в PHP.
+До какого-то ключевого момента (примерно до 5 версии), в PHP не было полноценной поддержки ООП, хотя классы и объекты поддерживались уже с 3 версии. Конечно, в самом PHP заключаются некоторые фатальные недостатки, большинство из которых все еще остаются в языке даже в новейших версиях (полный список, если вы еще их не читали, можно почитать в этой <a href="http://eqsash.com/articles/ustroystvo-yazyka-php-ego-plyusy-i-minusy"> статейке </a>). Но непонятных статей на темы "ООП в PHP совсем другое, и это хорошо", "не трогайте OOП в PHP, и вас ждет успех" и так далее много, так что давайте теперь перейдем к самому синтаксису в PHP.
 
 <h4> Синтаксические возможности PHP в плане ООП </h4>
 Если читатель хоть немного программировал в PHP, он знает, что этот язык поддерживает сразу две парадигмы: функциональную и объектно-ориентированную. Это двойственность языка вроде как никого не смущает, но часто приводит к проблемам в выполнении кода, потому как у множества функций есть двойственный интерфейс, к примеру mysqli:
 <source lang='php'>
 #процедурный вариант
 
-$connect = mysqli_connect("localhost", "root", "password", "db_example");  
+$connect = mysqli_connect("localhost", "root", "password", "db_example");
 # не буду тут приводить обработку ошибок, подключаемся к localhost под root 
 # с паролем password к базе данных db_example
 
-$res = mysqli_query($connect, "SELECT  * from users WHERE id = 1");
+$res = mysqli_query($connect, "SELECT * from users WHERE id = 1");
 $row = mysqli_fetch_assoc($res);
 echo $row['msg'];
 
-#тот же самый код, только в объектно-ориентированном виде   
+#тот же самый код, только в объектно-ориентированном виде 
 $mysqli = new connect("localhost", "root", "password", "db_example");
 #тоже тут пропущу обработку ошибок
-$res = $mysqli->query("SELECT  * from users WHERE id = 1");
+$res = $mysqli->query("SELECT * from users WHERE id = 1");
 $row = $res->fetch_assoc();
 echo $row['msg'];
 </source>
@@ -40,7 +40,7 @@ echo $row['msg'];
 
 <h3> Классы и экземпляры </h3>
  Изучение объектно-ориентированной парадигмы часто начинается с изучения экземпляров и классов. Учитывая, что концепция объектно-ориентированного программирования сама по себе пришла к нам из реального мира, здесь можно приводить множество аналогий, по типу абстрактный класс Автомобиль, экземпляр - "лада седан баклажан 2017 года выпуска".
- Что касается PHP, то в нем классическое решение относительно классов-> экземпляров, это перенести в класс какой-либо повторяющийся элемент, используя его как шаблон с повторяющимся контентом (ну и в общем примерно в таком же виде работает React с его компонентами, если все немного упростить). Очень часто гайдах по ООП можно встретить пример с классом User, но сегодня я обращусь к примеру класса Post. Допустим, у вас какой-то элементарный новостной сайт, в котором можно есть простенькая админка, в которой можно выкладывать свои новости. 
+ Что касается PHP, то в нем классическое решение относительно классов->экземпляров, это перенести в класс какой-либо повторяющийся элемент, используя его как шаблон с повторяющимся контентом (ну и в общем примерно в таком же виде работает React с его компонентами, если все немного упростить). Очень часто гайдах по ООП можно встретить пример с классом User, но сегодня я обращусь к примеру класса Post. Допустим, у вас какой-то элементарный новостной сайт, в котором можно есть простенькая админка, в которой можно выкладывать свои новости. 
  <source lang='PHP'>
 class Post
 {
@@ -118,7 +118,7 @@ class User
 
 Чаще всего наследование подразумевает по собой использование уже имеющегося шаблона класса с целью его расширения. По сути, это можно сравнить с комплектацией автомобилей в реальном мире: если вас интересует только базовая комплектация автомобиля и большего вам и не надо, тогда вы берете автомобиль с минимальным набором функций. Однако если вы много пользуетесь автомобилем и часто попадаете в различные ситуации, вам нужна расширенная функциональность.
 Что касается PHP, то здесь есть даже абстрактные классы и функции, в которых описывать работы класса, однако от них даже нельзя создавать экземпляры. 
-Но сейчас не об этом. Если мы говорим о наследовании, то достаточно часто оно используется для создания набора пользователей, которые посещают ваш сайт. Положим, у вас есть пользователи, которые могут комментировать сообщения на вашем блоге, и могут быть админы, которые тоже могут отвечать пользователям и комментировать. Таким образом, у нас получается следующая структура:
+Но сейчас не об этом. Если мы говорим о наследовании, то достаточно часто оно используется для создания набора пользователей, которые посещают ваш сайт. Положим, у вас есть пользователи, которые могут комментировать сообщения на вашем блоге, и могут быть админы, которые тоже могут удалить комментарии пользователей. Таким образом, у нас получается следующая структура:
 <source lang='php'>
 class User
 {
@@ -134,16 +134,18 @@ class User
     public function login()
     {
         #пользователь может зайти на ресурс
+        # под почтой и паролем, которые он использовал во время регистрации
     }
 
     public function logout($user_email, $user_password)
     {
-
+        # пользователь может покинуть ресурс. Если у нас все написано на сессиях, тогда нам надо ее закончить
     }
 
     public function сomment($user_email)
     {
-        //пользователь может оставлять комментарии в любом из постов
+       #пользователь может оставлять комментарии в любом из постов
+        #для этого вам скорее всего нужно будет реализовать foreigh ключ
     }
 
 }
@@ -164,10 +166,10 @@ class Admin extends User
 Отлично, теперь вы можете создавать два вида пользователей, и у каждого будет своя функциональность. Кроме того, никто не мешает вам потом создать, к примеру, суперадминстратора, который сможет добавлять/удалять администраторов, когда ваш сайт увеличится в размерах и придется набирать достаточно большую команду админов.
 На этом все. Вот некоторые полезные ссылки:
 <ul>
-    <li><a href="https://www.php.net/manual/ru/language.oop5.php"> Введение в PHP из официальной документации </a>
-        <li>  <a href="https://www.codechief.org/article/class-abstraction-abstract-class-in-php.html">  Немного на абстрактном классе</a> </li>
-        <li> <a href="https://habr.com/ru/post/302942/"> Полезная информация по нововедениям PHP7, если вам не очень понятно, чем 7 версия языка отличается от 5</a></li>
-</li>
+    <li><a href="https://www.php.net/manual/ru/language.oop5.php"> Введение в PHP из официальной документации </a> </li>
+        <li>  <a href="https://www.codechief.org/article/class-abstraction-abstract-class-in-php.html">  Немного на абстрактных классах </a> </li>
+        <li> <a href="https://habr.com/ru/post/302942/"> Полезная информация по нововедениям PHP7, если вам не очень понятно, чем 7 версия языка отличается от 5(если вы бродите по различным гайдам по ООП, пытаясь понять, о каком версии PHP идет речь)</a></li>
+
 </ul>
 
 
